==> mikee47/HardwareSPI/src/Arch/Rp2040/Controller.cpp <==
#include <HSPI/Controller.h>
#include <HSPI/Device.h>
#include <hardware/structs/spi.h>
#include <hardware/clocks.h>
#include <hardware/address_mapped.h>
#include <hardware/resets.h>
#include <hardware/gpio.h>
#include <hardware/regs/dreq.h>
#include <hardware/regs/intctrl.h>
#include <hardware/dma.h>
#include <hardware/irq.h>
#include <hardware/sync.h>
#include <Interrupts.h>
#include <esp_system.h>
#include <debug_progmem.h>
#include <Platform/Timers.h>
#include <hardware/structs/uart.h>
#define SPI_PERIPH_NUM 2
#define spi_debug(fmt, ...) spi_uart_printf(fmt "\r\n", ##__VA_ARGS__)

SpiPreDiv calculateClock(unsigned baudrate)
{
	auto freq_in = clock_get_hz(clk_peri);
	if(baudrate > freq_in) {
		return SpiPreDiv{freq_in, 2, 1};
	}

	/*
	 * Find smallest prescale value which puts output frequency in range of post-divide.
	 * Prescale is an even number from 2 to 254 inclusive.
	 */
	unsigned prescale;
	for(prescale = 2; prescale <= 254; prescale += 2) {
		if(freq_in < (prescale + 2) * 256 * (uint64_t)baudrate)
			break;
	}
	if(prescale > 254) {
		// Frequency too low
		prescale = 254;
	}

	/*
	 * Find largest post-divide which makes output <= baudrate.
	 * Post-divide is an integer in the range 1 to 256 inclusive.
	 */
	unsigned postdiv;
	for(postdiv = 256; postdiv > 1; --postdiv) {
		if(freq_in / (prescale * (postdiv - 1)) > baudrate)
			break;
	}

	// Return actual frequency and corresponding settings
	return SpiPreDiv{freq_in / (prescale * postdiv), uint8_t(prescale), uint8_t(postdiv)};
}

bool Controller::begin()
{
	if(flags.initialised) {
		return true;
	}

	unsigned busIndex = unsigned(busId) - 1;
	if(busIndex >= ARRAY_SIZE(peripheralDefs)) {
		debug_e("Invalid bus ID");
		return false;
	}

	auto& periph = peripherals[busIndex];
	if(periph.controller != nullptr) {
		debug_e("[SPI] Bus #%u already assigned", busId);
		return false;
	}

	periph.init(*this);

	auto& def = peripheralDefs[busIndex];
	configure_dma(&periph.hw->dr, def.dreq_tx, def.dreq_rx);

	/* Configure pins */
	assignDefaultPins(def.pins);

	gpio_set_function(pins.sck, GPIO_FUNC_SPI);
	gpio_set_function(pins.miso, GPIO_FUNC_SPI);
	gpio_set_function(pins.mosi, GPIO_FUNC_SPI);
	gpio_disable_pulls(pins.sck);
	gpio_pull_up(pins.miso);
	gpio_disable_pulls(pins.mosi);

	flags.initialised = true;
	return true;
}

void Controller::end()
{
	if(!flags.initialised) {
		return;
	}

	// Check all devices have been released
	if(deviceCount != 0) {
		debug_e("ERROR: Devices not released");
		abort();
	}

	release_dma();

	auto& periph = getPeriph(busId);
	periph.deinit();

	flags.initialised = false;
}

bool Controller::startDevice(Device& dev, PinSet pinSet, uint8_t chipSelect, uint32_t clockSpeed)
{
	if(!flags.initialised) {
		debug_e("[SPI] Controller not initialised");
		return false;
	}

	if(dev.pinSet != PinSet::none) {
		debug_e("[SPI] device already started on bus %u, CS #%u", unsigned(busId), dev.chipSelect);
		return false;
	}

	if(pinSet != PinSet::normal) {
		debug_e("[SPI] PinSet not supported");
		return false;
	}

	// Chip select
	gpio_put(chipSelect, true);
	gpio_set_dir(chipSelect, true);
	gpio_disable_pulls(chipSelect);
	gpio_set_function(chipSelect, GPIO_FUNC_SIO);

	// Calculate clock setting
	setClockSpeed(dev, clockSpeed);
	dev.config.dirty = true;

	++deviceCount;
	dev.pinSet = pinSet;
	dev.chipSelect = chipSelect;

	debug_i("[SPI] Bus %u, CS #%u acquired", unsigned(busId), chipSelect);
	return true;
}

void Controller::stopDevice(Device& dev)
{
	switch(dev.pinSet) {
	case PinSet::normal:
		assert(deviceCount > 0);
		--deviceCount;
		break;

	case PinSet::none:
		return;

	case PinSet::overlap:
	default:
		assert(false);
		return;
	}

	detachInterrupt(dev.chipSelect);

	dev.pinSet = PinSet::none;
	dev.chipSelect = 255;
}

void Controller::updateConfig(Device& dev)
{
	auto& cfg = dev.config;
	cfg.cr0val = SpiPeriph::makeCR0(dev.getClockMode(), cfg.clk_postdiv);
	cfg.dirty = false;
}

void Controller::execute(Request& req)
{
	if(!flags.initialised || req.device == nullptr || req.device->pinSet == PinSet::none) {
		debug_e("[SPI] Device not initialised");
		return;
	}

	// debug_i("[SPI] execute cmd %u 0x%04x, addr %u, mosi %u, dummy %u, miso %u, async %u", req.cmdLen, req.cmd,
	// 		req.addrLen, req.out.length, req.dummyLen, req.in.length, req.async);

	req.next = nullptr;
	req.busy = true;

	auto dev = req.device;
	if(dev->config.dirty) {
		updateConfig(*dev);
	}

	// Packet transfer already in progress?
	dma_channel_set_irq0_enabled(dma.rx_channel, false);
	if(trans.busy) {
		// Tack new packet onto end of chain
		auto pkt = trans.request;
		while(pkt->next) {
			pkt = pkt->next;
		}
		pkt->next = &req;
	} else {
		// Not currently running, so do this one now
		trans.request = &req;
		startRequest();
	}
	dma_channel_set_irq0_enabled(dma.rx_channel, true);

	if(!req.async) {
		// Block and poll
		wait(req);
	}
}

void IRAM_ATTR Controller::startRequest()
{
	auto& req = *trans.request;
	auto& dev = *req.device;

	uint8_t controlBitCount = req.cmdLen + req.addrLen + req.dummyLen;
	if(controlBitCount != 0 && (controlBitCount < 4 || controlBitCount > 16)) {
		spi_debug("[SPI] ctrl %u, mosi %p %u, miso %p %u", controlBitCount, req.out.get(), req.out.length, req.in.get(),
				  req.in.length);
	}
	// spi_debug("[SPI] cmd %u 0x%04x, addr %u, mosi %u, dummy %u, miso %u", req.cmdLen, req.cmd, req.addrLen,
	// 		  req.out.length, req.dummyLen, req.in.length);

	/*
	 * Only SPI, SPIHD modes supported.
	 * SPI3WIRE requires read/write on same wire but that doesn't look possible.
	 *
	 * Command/address/dummy phase implemented by writing directly to FIFO,
	 * DMA transfers then handle MOSI/MISO phase.
	 * Bits read during this initial phase are discarded using a separate RX DMA.
	 * These are chained using a control DMA channel.
	 *
	 * SPI: Both TX/RX DMA occur simultaneously
	 * SPIHD: TX DMA first, chain to RX DMA on completion.
	 */
	switch(dev.ioMode) {
	case IoMode::SPI:
	case IoMode::SPIHD:
		break;
	default:
		debug_e("[SPI] Hardware doesn't support requested mode");
		assert(false);
	}

	/*
		Full-duplex mode (SPI) has MOSI and MISO phases. For half-duplex transfers:

			command
			address
			dummy
			mosi
			miso

		How to handle dummy? e.g.
			cmd8 - addr24 - dummy 1 - miso N
				Total OUT is 33 bits, can send as 16+8+9
				Using DMA we'd use 8+8+8+9

		e.g. ILI9341 uses 1 dummy bit for reads, RAM might use 8, etc.

		We've got 12 DMA channels so using a third channel for RX control isn't unreasonable.
	*/

	if(selectDeviceCallback) {
		selectDeviceCallback(dev.chipSelect, true);
	}
	dev.transferStarting(req);

	// Assert CS
	gpio_put(dev.chipSelect, false);

	trans.busy = true;
	trans.bitOrder = dev.bitOrder;

	auto& periph = getPeriph(busId);
	periph.setClockPrescale(dev.config.clk_prescale);

	uint8_t fifoCount{0}; // Words written directly into FIFO
	if(controlBitCount == 0) {
		periph.setWordSize(dev.config.cr0val, 8);
	} else {
		// Note: Could handle this by prepending to first MOSI byte
		assert(controlBitCount >= 4);

		uint64_t controlBits{0};
		if(trans.bitOrder == MSBFIRST) {
			controlBits = req.cmd;
			if(req.addrLen != 0) {
				controlBits <<= req.addrLen;
				controlBits |= req.addr;
			}
		} else {
			if(req.cmdLen != 0) {
				controlBits = reverseBits(req.cmd) >> (16 - req.cmdLen);
			}
			if(req.addrLen != 0) {
				controlBits <<= req.addrLen;
				controlBits |= reverseBits(req.addr) >> (32 - req.addrLen);
			}
		}
		controlBits <<= req.dummyLen;

		if(controlBitCount <= 16) {
			periph.setWordSize(dev.config.cr0val, controlBitCount);
			periph.write(controlBits);
			fifoCount = 1;
			// Require at least 1 cycle before changing word size
			__asm__ volatile("nop" :::);
			periph.setWordSize(dev.config.cr0val, 8);
		} else {
			// Write an initial word from 8-15 bits
			uint8_t initialWordSize = (controlBitCount % 8) + 8;
			periph.setWordSize(dev.config.cr0val, initialWordSize);
			controlBitCount -= initialWordSize;
			periph.write(controlBits >> controlBitCount);
			++fifoCount;
			// All following words are 8 bits
			__asm__ volatile("nop" :::);
			periph.setWordSize(dev.config.cr0val, 8);
			while(controlBitCount != 0) {
				controlBitCount -= 8;
				periph.write(controlBits >> controlBitCount);
				++fifoCount;
			}
		}
	}

	uint16_t channel_mask{0};

	// Setup outgoing data
	if(req.out.length != 0) {
		if(trans.bitOrder != MSBFIRST) {
			reverseBits(req.out.get(), req.out.length);
		}
		channel_mask |= BIT(dma.tx_channel);
		size_t outlen = req.out.length;
		if(dev.ioMode != IoMode::SPI) {
			/*
			 * Half-duplex, transmit bytes to match MISO
			 * TODO: For simplicity just read past end of provided buffer
			 * since we don't care what data is output.
			 */
			outlen += req.in.length;
		}
		dma_channel_set_read_addr(dma.tx_channel, req.out.get(), false);
		dma_channel_set_trans_count(dma.tx_channel, outlen, false);
		dma_channel_set_config(dma.tx_channel, &dma.tx_config, false);
	} else if(req.in.length != 0) {
		// Clock dummy bits
		channel_mask |= BIT(dma.tx_channel);
		dma.buffer[0] = 0xffffffff;
		dma_channel_set_read_addr(dma.tx_channel, dma.buffer, false);
		dma_channel_set_trans_count(dma.tx_channel, req.in.length, false);
		dma_channel_set_config(dma.tx_channel, &dma.tx_config_dummy, false);
	}

	// Setup incoming data
	if(req.in.length == 0) {
		// Dummy reads to match control + MOSI
		channel_mask |= BIT(dma.rx_channel);
		dma_channel_set_write_addr(dma.rx_channel, dma.buffer, false);
		dma_channel_set_trans_count(dma.rx_channel, fifoCount + req.out.length, false);
		dma_channel_set_config(dma.rx_channel, &dma.rx_config_dummy, false);
	} else if(dev.ioMode != IoMode::SPI) {
		// Half-duplex, use dummy read followed by MISO read
		channel_mask |= BIT(dma.ctrl_channel);
		dma.control_blocks[0] = RxControlBlock{dma.buffer, size_t(fifoCount + req.out.length)};
		dma.control_blocks[1] = RxControlBlock{req.in.get(), req.in.length};
		dma_channel_set_read_addr(dma.ctrl_channel, &dma.control_blocks[0], false);
		dma_channel_set_config(dma.rx_channel, &dma.rx_config_chain, false);
	} else if(fifoCount != 0) {
		// Dummy read followed by MISO read
		channel_mask |= BIT(dma.ctrl_channel);
		dma.control_blocks[0] = RxControlBlock{dma.buffer, fifoCount};
		dma.control_blocks[1] = RxControlBlock{req.in.get(), req.in.length};
		dma_channel_set_read_addr(dma.ctrl_channel, &dma.control_blocks[0], false);
		dma_channel_set_config(dma.rx_channel, &dma.rx_config_chain, false);
	} else {
		// MISO read
		channel_mask |= BIT(dma.rx_channel);
		dma_channel_set_write_addr(dma.rx_channel, req.in.get(), false);
		dma_channel_set_trans_count(dma.rx_channel, req.in.length, false);
		dma_channel_set_config(dma.rx_channel, &dma.rx_config, false);
	}

#ifdef HSPI_ENABLE_STATS
	++stats.transCount;
#endif

	/* Execute now */

	// start channels simultaneously to avoid races (in extreme cases the FIFO could overflow)
	dma_start_channel_mask(channel_mask);
}

void IRAM_ATTR Controller::transactionDone()
{
	auto& req = *trans.request;
	auto& dev = *req.device;

	// De-assert CS
	gpio_put(dev.chipSelect, true);

	if(selectDeviceCallback) {
		selectDeviceCallback(dev.chipSelect, false);
	}

	// Transform received data bit order (if required)
	if(req.in.length != 0 && trans.bitOrder != MSBFIRST) {
		reverseBits(req.in.get(), req.in.length);
	}

	trans.busy = false;
	req.busy = false;
#ifdef HSPI_ENABLE_STATS
	++stats.requestCount;
#endif

	// Note next packet in chain and de-queue this one
	trans.request = req.next;
	req.next = nullptr;

	if(!dev.transferComplete(req)) {
		trans.request = reQueueRequest(trans.request, &req);
		req.busy = true;
	}

	// Feed the hardware
	if(trans.request != nullptr) {
		startRequest();
	}
}
