==> mikee47/HardwareSPI/src/Arch/Esp8266/Controller.cpp <==
#include <HSPI/Controller.h>
#include <HSPI/Device.h>
#include <esp_clk.h>
#include <esp_systemapi.h>
#include <espinc/spi_register.h>
#include <espinc/spi_struct.h>
#include <espinc/gpio_struct.h>
#include <espinc/pin_mux_register.h>
#include <Platform/Timers.h>
#include "Debug.h"
#define PIN_HSPI_MISO 12
#define PIN_HSPI_MOSI 13
#define PIN_HSPI_CLK 14
#define PIN_HSPI_CS0 15
#define PIN_SPI_CS1 1
#define PIN_SPI_CS2 0
#define DPORT_SPI_INT_STATUS_REG 0x3ff00020
#define DPORT_SPI_INT_STATUS_SPI0 BIT4
#define DPORT_SPI_INT_STATUS_SPI1 BIT7
#define CS_ENABLE(cspin, func)                                                                                         \
	{                                                                                                                  \
		PIN_PULLUP_EN(PERIPHS_GPIO_MUX_REG(cspin));                                                                    \
		PIN_FUNC_SELECT(PERIPHS_GPIO_MUX_REG(cspin), func);                                                            \
	}

uint32_t calculateClock(uint32_t frequency, spi_dev_t::clock_t& clockReg)
{
	if(frequency >= APB_CLK_FREQ) {
		clockReg = clkEquSys;
		return APB_CLK_FREQ;
	}

	if(frequency < getClockFrequency(clkMin)) {
		// use minimum possible clock
		clockReg = clkMin;
		return getClockFrequency(clkMin);
	}

	// find the best match
	clockReg.val = 0;
	uint8_t calN{1};
	uint32_t clockFreq{0};
	while(calN <= 0x3F) {
		uint32_t calFreq{0};
		spi_dev_t::clock_t reg{};
		reg.clkcnt_n = calN;

		// Test different variants for prescale
		int8_t calPreVari{-2};
		while(calPreVari++ <= 1) {
			int calPre = (((APB_CLK_FREQ / (reg.clkcnt_n + 1)) / frequency) - 1) + calPreVari;
			if(calPre > 0x1FFF) {
				reg.clkdiv_pre = 0x1FFF; // 8191
			} else if(calPre <= 0) {
				reg.clkdiv_pre = 0;
			} else {
				reg.clkdiv_pre = calPre;
			}

			// Test calculation
			calFreq = getClockFrequency(reg);

			if(calFreq == frequency) {
				// accurate match use it!
				clockFreq = calFreq;
				clockReg = reg;
				break;
			}

			if(calFreq < frequency) {
				// never go over the requested frequency
				if(abs(int(frequency - calFreq)) < abs(int(frequency - clockFreq))) {
					clockFreq = calFreq;
					clockReg = reg;
				}
			}
		}

		if(calFreq == frequency) {
			// accurate match use it!
			break;
		}

		calN++;
	}

	// In the master mode clkcnt_h = floor((clkcnt_n+1)/2-1). In the slave mode it must be 0
	clockReg.clkcnt_h = ((clockReg.clkcnt_n + 1) / 2) - 1;
	// In the master mode clkcnt_l = clkcnt_n. In the slave mode it must be 0
	clockReg.clkcnt_l = clockReg.clkcnt_n;

	return clockFreq;
}

bool Controller::begin()
{
	if(flags.initialised) {
		return true;
	}

	// Pinset and chip selects are device-dependent and not initialised here - see startPacket()

	SPI0.slave.val &= ~0x000003FF; // Don't want interrupts from SPI0
	SPI1.slave.val &= ~0x000003FF; // Clear all interrupt sources
	SPI1.slave.trans_inten = 1;	// Interrupt on command completion
	SPI1.slave.slave_mode = false;
	SPI1.slave.sync_reset = true;
	SPI1.ctrl1.val = 0;
	SPI1.wr_status = 0; // TODO: Upper portion of 64-bit address

	// From ESP32 code: 'we do need at least one clock of hold time in most cases'
	spi_dev_t::ctrl2_t ctrl2{};
	//			ctrl2.miso_delay_mode = 3;
	ctrl2.miso_delay_num = 1;
	//			ctrl2.mosi_delay_mode = 3;
	//			ctrl2.mosi_delay_num = 4;
	//			ctrl2.cs_delay_mode = 1;
	//			ctrl2.cs_delay_num = 4;
	SPI1.ctrl2.val = ctrl2.val;

	TESTPIN_SETUP();

	ETS_SPI_INTR_ATTACH(ets_isr_t(isr), this);
	ETS_SPI_INTR_ENABLE();

	flags.initialised = true;
	return true;
}

void Controller::end()
{
	ETS_SPI_INTR_DISABLE();

	// Disable all hardware chip selects
	SPI1.pin.cs0_dis = 1;
	SPI1.pin.cs1_dis = 1;
	SPI1.pin.cs2_dis = 1;

	flags.initialised = false;

	// Check all devices have been released
	assert(normalDevices == 0 && overlapDevices == 0);
}

bool Controller::startDevice(Device& dev, PinSet pinSet, uint8_t chipSelect, uint32_t clockSpeed)
{
	if(!flags.initialised) {
		debug_e("SPI Controller not initialised");
		return false;
	}

	if(dev.pinSet != PinSet::none) {
		debug_e("SPI device already started at %u, CS #%u", unsigned(dev.pinSet), dev.chipSelect);
		return false;
	}

	auto csMax = (pinSet == PinSet::overlap) ? 2 : 0;
	if(chipSelect > csMax) {
		debug_e("SPI pinSet %u, CS #%u invalid", unsigned(pinSet), chipSelect);
		return false;
	}

	if(chipSelectsInUse[chipSelect]) {
		debug_e("SPI CS #%u in use", chipSelect);
		return false;
	}

	switch(pinSet) {
	case PinSet::overlap:
		if(overlapDevices++ == 0) {
			//
		}
		break;

	case PinSet::normal:
		if(normalDevices++ == 0) {
			enableSpi1Pins(true);
		}
		break;

	case PinSet::none:
	default:
		return false;
	}

	// Enable Hardware CS
	switch(chipSelect) {
	case 0:
		CS_ENABLE(PIN_HSPI_CS0, FUNC_HSPI_CS0);
		break;
	case 1:
		CS_ENABLE(PIN_SPI_CS1, FUNC_SPICS1);
		break;
	case 2:
		CS_ENABLE(PIN_SPI_CS2, FUNC_SPICS2);
		break;
	}

	dev.pinSet = pinSet;
	dev.chipSelect = chipSelect;
	chipSelectsInUse[chipSelect] = true;
	dev.config.dirty = true;

	// Calculate clock setting
	spi_dev_t::clock_t reg;
	dev.speed = calculateClock(clockSpeed, reg);
	dev.config.reg.clock = reg.val;

	debug_i("SPI pinSet %u, CS #%u acquired", unsigned(pinSet), chipSelect);
	return true;
}

void Controller::stopDevice(Device& dev)
{
	switch(dev.pinSet) {
	case PinSet::overlap:
		assert(overlapDevices > 0);
		--overlapDevices;
		overlapEnable(false);
		break;

	case PinSet::normal:
		assert(normalDevices > 0);
		--normalDevices;
		if(normalDevices == 0) {
			enableSpi1Pins(false);
		}
		break;

	case PinSet::none:
		return;

	default:
		assert(false);
	}

	auto cs = dev.chipSelect;
	switch(cs) {
	case 0:
		CS_DISABLE(PIN_HSPI_CS0, FUNC_GPIO15);
		break;
	case 1:
		CS_DISABLE(PIN_SPI_CS1, FUNC_GPIO1);
		break;
	case 2:
		CS_DISABLE(PIN_SPI_CS2, FUNC_GPIO0);
		break;
	default:
		assert(false);
	}

	debug_i("SPI pinSet %u, CS #%u released", dev.pinSet, cs);

	if(cs < chipSelectsInUse.size()) {
		chipSelectsInUse[cs] = false;
	}

	dev.pinSet = PinSet::none;
	dev.chipSelect = 255;
}

void Controller::updateConfig(Device& dev)
{
	struct {
		spi_dev_t::user_t user;
		spi_dev_t::ctrl_t ctrl;
		spi_dev_t::pin_t pin;
	} reg;
	reg.user.val = 0;
	reg.user.cs_setup = true;
	reg.user.cs_hold = true;
	reg.ctrl.val = 0;
	reg.ctrl.wp_reg = true;
	reg.pin.val = 0;

	// Enable Hardware CS
	switch(dev.chipSelect) {
	case 0:
		reg.pin.cs1_dis = true;
		reg.pin.cs2_dis = true;
		reg.pin.cs0_dis = false;
		break;
	case 1:
		reg.pin.cs0_dis = true;
		reg.pin.cs2_dis = true;
		reg.pin.cs1_dis = false;
		break;
	case 2:
		reg.pin.cs0_dis = true;
		reg.pin.cs1_dis = true;
		reg.pin.cs2_dis = false;
		break;
	default:
		// TODO: Call method for manual CS control, NON-OVERLAPPED mode ONLY!
		reg.pin.cs0_dis = true;
		reg.pin.cs1_dis = true;
		reg.pin.cs2_dis = true;
	}

	// Bit order
	auto bitOrder = dev.getBitOrder();
	reg.ctrl.rd_bit_order = (bitOrder == MSBFIRST) ? 0 : 1;
	reg.ctrl.wr_bit_order = (bitOrder == MSBFIRST) ? 0 : 1;

	// Byte order
	auto byteOrder = LSBFIRST;
	reg.user.wr_byte_order = (byteOrder == MSBFIRST) ? 1 : 0;
	reg.user.rd_byte_order = (byteOrder == MSBFIRST) ? 1 : 0;

	// Data mode
	auto ioMode = dev.getIoMode();
	reg.user.duplex = (ioMode == IoMode::SPI);
	switch(ioMode) {
	case IoMode::SPI:
	case IoMode::SPIHD:
		break;
	case IoMode::SPI3WIRE:
		reg.user.sio = true;
		break;
	case IoMode::SDI:
	case IoMode::DIO:
		reg.ctrl.fastrd_mode = true;
		reg.ctrl.fread_dio = true;
		reg.user.fwrite_dio = true;
		break;
	case IoMode::DUAL:
		reg.ctrl.fastrd_mode = true;
		reg.ctrl.fread_dual = true;
		reg.user.fwrite_dual = true;
		break;
	case IoMode::SQI:
	case IoMode::QIO:
		reg.ctrl.fastrd_mode = true;
		reg.ctrl.fread_qio = true;
		reg.user.fwrite_qio = true;
		break;
	case IoMode::QUAD:
		reg.ctrl.fastrd_mode = true;
		reg.ctrl.fread_quad = true;
		reg.user.fwrite_quad = true;
		break;
	default:
		assert(false);
	}

	// Clock phase/polarity
	auto clockMode = uint8_t(dev.getClockMode());
	reg.user.ck_out_edge = (clockMode & 0x01) ? 1 : 0; // CPHA
	reg.pin.ck_idle_edge = (clockMode & 0x10) ? 1 : 0; // CPOL

	auto& cfg = dev.config;
	cfg.reg.user = reg.user.val;
	cfg.reg.ctrl = reg.ctrl.val;
	cfg.reg.pin = reg.pin.val;
	cfg.dirty = false;
}

void Controller::execute(Request& req)
{
	if(!flags.initialised || req.device == nullptr || req.device->pinSet == PinSet::none) {
		debug_e("SPI device not initialised");
		return;
	}

	req.next = nullptr;
	req.busy = true;

	auto dev = req.device;
	if(dev->config.dirty) {
		updateConfig(*dev);
	}

	// For high clock speeds don't use transaction interrupts
	if(req.async && dev->speed >= 16000000U) {
		//		req.task = true;
	}

	// Packet transfer already in progress?
	ETS_SPI_INTR_DISABLE();
	if(trans.busy) {
		// Tack new packet onto end of chain
		auto pkt = trans.request;
		while(pkt->next) {
			pkt = pkt->next;
		}
		pkt->next = &req;
		if(req.async) {
			if(!flags.taskQueued) {
				ETS_SPI_INTR_ENABLE();
			}
			return;
		}
	} else {
		// Not currently running, so do this one now
		trans.request = &req;
		startRequest();
		if(req.async) {
			if(req.task) {
				queueTask();
			} else {
				ETS_SPI_INTR_ENABLE();
			}
			return;
		}
	}

	// Block and poll
	wait(req);
}

void IRAM_ATTR Controller::startRequest()
{
	TESTPIN1_HIGH();

	auto& req = *trans.request;
	auto& dev = *req.device;
	auto& cfg = dev.config;

	if(selectDeviceCallback) {
		selectDeviceCallback(dev.chipSelect, true);
	}
	dev.transferStarting(req);

	trans.addr = req.addr;
	trans.outOffset = 0;
	trans.inOffset = 0;
	trans.inlen = 0;
	trans.ioMode = dev.getIoMode();
	trans.bitOrder = dev.getBitOrder();
	trans.busy = true;

	auto pinSet = dev.pinSet;
	if(pinSet != activePinSet) {
		if(activePinSet == PinSet::overlap) {
			overlapEnable(false);
		}

		// New pin set
		if(pinSet == PinSet::overlap) {
			overlapEnable(true);
		}

		activePinSet = pinSet;
	}

	// Clock
	auto ioMux = READ_PERI_REG(PERIPHS_IO_MUX_CONF_U);
	spi_dev_t::clock_t clk{.val = cfg.reg.clock};
	if(clk.clk_equ_sysclk) {
		ioMux |= SPI1_CLK_EQU_SYS_CLK;
	} else {
		ioMux &= ~SPI1_CLK_EQU_SYS_CLK;

		// In overlap mode, SPI0 sysclock selection overrides SPI1
		if(!flags.spi0ClockChanged && activePinSet == PinSet::overlap) {
			if(ioMux & SPI0_CLK_EQU_SYS_CLK) {
				SPI0.clock.val = clkDiv2.val;
				ioMux &= ~SPI0_CLK_EQU_SYS_CLK;
				flags.spi0ClockChanged = true;
			}
		}
	}
	WRITE_PERI_REG(PERIPHS_IO_MUX_CONF_U, ioMux);
	SPI1.clock.val = cfg.reg.clock;

	SPI1.ctrl.val = cfg.reg.ctrl;
	SPI1.pin.val = cfg.reg.pin;

	spi_dev_t::user_t user{.val = cfg.reg.user};
	spi_dev_t::user1_t user1{.val = cfg.reg.user1};

	trans.addrCmdMask = 0;
	trans.addrShift = 0;
	if(trans.ioMode == IoMode::SDI || trans.ioMode == IoMode::SQI) {
		// Setup command bits
		// TODO: For now, only 8-bit command supported
		if(req.cmdLen != 0) {
			req.cmdLen = 8;
			if(trans.bitOrder == MSBFIRST) {
				trans.addrCmdMask = uint32_t(req.cmd) << (32 - req.cmdLen);
				trans.addrShift = 32 - req.cmdLen - req.addrLen;
			} else {
				trans.addrCmdMask = req.cmd;
				trans.addrShift = req.cmdLen;
			}
		}

		user.usr_command = false;

		if(req.cmdLen + req.addrLen != 0) {
			user1.usr_addr_bitlen = req.cmdLen + req.addrLen - 1;
			user.usr_addr = true;
		} else {
			user.usr_addr = false;
		}
	} else {
		// Setup command bits
		if(req.cmdLen != 0) {
			uint16_t cmd{req.cmd};
			if(trans.bitOrder == MSBFIRST) {
				// Command sent bit 7->0 then 15->8 so adjust ordering
				cmd = bswap16(cmd << (16 - req.cmdLen));
			}
			spi_dev_t::user2_t user2{};
			user2.usr_command_value = cmd;
			user2.usr_command_bitlen = req.cmdLen - 1;
			SPI1.user2.val = user2.val;
			user.usr_command = true;
		} else {
			user.usr_command = false;
		}

		// Setup address bits
		if(req.addrLen != 0) {
			if(trans.bitOrder == MSBFIRST) {
				trans.addrShift = 32 - req.addrLen;
			}
			user1.usr_addr_bitlen = req.addrLen - 1;
			user.usr_addr = true;
		} else {
			user.usr_addr = false;
		}
	}

	// Setup dummy bits
	if(req.dummyLen != 0) {
		user1.usr_dummy_cyclelen = req.dummyLen - 1;
		user.usr_dummy = true;
	} else {
		user.usr_dummy = false;
	}

	cfg.reg.user = user.val;
	cfg.reg.user1 = user1.val;

	nextTransaction();
}

void IRAM_ATTR Controller::transactionDone()
{
	TESTPIN2_LOW();

	if(trans.request == nullptr) {
		return;
	}

	auto& req = *trans.request;
	auto& dev = *req.device;

	if(selectDeviceCallback) {
		selectDeviceCallback(dev.chipSelect, false);
	}

	// Read incoming data
	if(trans.inlen != 0) {
		if(req.in.isPointer) {
			auto dst = req.in.ptr8 + trans.inOffset;
			if(IS_ALIGNED(dst) && IS_ALIGNED(trans.inlen)) {
				memcpy(dst, (const void*)SPI1.data_buf, trans.inlen);
			} else {
				auto len = ALIGNUP4(trans.inlen);
				uint8_t buffer[len];
				memcpy(buffer, (const void*)SPI1.data_buf, len);
				memcpy(dst, buffer, trans.inlen);
			}
		} else {
			req.in.data32 = SPI1.data_buf[0];
		}
		trans.inOffset += trans.inlen;
		trans.inlen = 0;
	}

	// Packet complete?
	if(trans.inOffset < req.in.length || trans.outOffset < req.out.length) {
		// Nope, continue
		nextTransaction();
		return;
	}

	TESTPIN1_LOW();
	trans.busy = false;
	req.busy = false;
#ifdef HSPI_ENABLE_STATS
	++stats.requestCount;
#endif

	// Note next packet in chain and de-queue this one
	trans.request = req.next;
	req.next = nullptr;

	if(!dev.transferComplete(req)) {
		trans.request = reQueueRequest(trans.request, &req);
		req.busy = true;
	}

	// Feed the hardware
	if(trans.request != nullptr) {
		if(trans.request->task) {
			ETS_SPI_INTR_DISABLE();
			startRequest();
			queueTask();
		} else {
			startRequest();
			ETS_SPI_INTR_ENABLE();
		}
	} else if(flags.spi0ClockChanged) {
		// All transfers have completed, set SPI0 clock back to full speed
		SET_PERI_REG_MASK(PERIPHS_IO_MUX_CONF_U, SPI0_CLK_EQU_SYS_CLK);
		flags.spi0ClockChanged = false;
	}
}
